fix: add a white background to radios and checkboxes to improve contrast on grey components #48 #47

--- a/app/assets/sass/components/_checkboxes.scss
+++ b/app/assets/sass/components/_checkboxes.scss
@@ -8,6 +8,7 @@
 .multiple-choice--hod [type=checkbox] + label::before {
   width: 21px;
   height: 21px;
+  background-color: #fff;
 }
 
 .multiple-choice--hod [type=checkbox] + label::after {
